Improve GltfTarget's code quality
* Use enhanced switch
* Use Stream.toList
* Prefer List.of over asList for single-element lists